added test CreateAndDeletePost